Fix on mobile Image

--- a/app/css/sections/_home-mobile.scss
+++ b/app/css/sections/_home-mobile.scss
@@ -177,6 +177,7 @@
           margin-top: 23px;
           float: right;
           width: 22%;
+          max-width: 71px;
           img{
             width: 100%;
           }
